# kmp-lib

./: .gitignore  CMakeLists.txt  README.md  TEST_RESULTS.md
benchmarks/: CMakeLists.txt  bench_regex.cpp  bench_search.cpp  bench_simd.cpp
examples/: CMakeLists.txt  basic.cpp  regex.cpp
include/kmp/: config.hpp  kmp.hpp  pattern.hpp  search.hpp
include/kmp/detail/: dfa.hpp  failure.hpp
include/kmp/detail/simd/: avx2.hpp  avx512.hpp  dispatch.hpp  sse42.hpp
tests/: CMakeLists.txt
tests/data/: long_sentences.txt  regex_patterns.txt  stress_patterns.txt  testcases.txt
tests/unit/: test_concurrency.cpp  test_edge_cases.cpp  test_failure.cpp  test_file_runner.cpp  test_pattern.cpp  test_performance.cpp  test_randomized.cpp  test_regex.cpp  test_search.cpp  test_simd.cpp  test_stress.cpp
